# rn-pest-control-ai

./: .gitignore  App.tsx  app.json  global.d.ts  jsi.setup.ts  package-lock.json  package.json  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: best_quant.onnx
android/app/src/main/java/com/pest_control_mobile/: MainActivity.kt  MainApplication.kt  NativeImageProcessor.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
components/: Button.tsx  CameraView.tsx  Gap.tsx  ImagePicker.tsx
ios/: Podfile
ios/pest_control_mobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/pest_control_mobile.xcodeproj/: project.pbxproj
ios/pest_control_mobile.xcodeproj/xcshareddata/xcschemes/: pest_control_mobile.xcscheme
shared/: NativeImageProcessor.cpp  NativeImageProcessor.h
specs/: NativeImageProcessor.ts
